// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

import "common/src/main/resources/testdata/proto2/messages_proto2.proto";
import "common/src/main/resources/testdata/proto2/test_all_types.proto";

package dev.cel.testing.testdata.proto2;

option java_outer_classname = "MessagesProto2Extensions";
option java_package = "dev.cel.testing.testdata.proto2";
option java_multiple_files = true;

// Package scoped extensions
extend Proto2Message {
  optional Proto2Message nested_ext = 100;
  optional int32 int32_ext = 101;
  optional dev.cel.testing.testdata.proto2.TestAllTypes test_all_types_ext =
      102;
  optional dev.cel.testing.testdata.proto2.TestAllTypes.NestedEnum
      nested_enum_ext = 103;
  repeated StringHolder repeated_string_holder_ext = 104;
}

// Message scoped extensions
message Proto2ExtensionScopedMessage {
  extend Proto2Message {
    optional Proto2Message message_scoped_nested_ext = 105;
    optional NestedMessageInsideExtensions nested_message_inside_ext = 106;
    optional int64 int64_ext = 107;
    optional string string_ext = 108;
  }
}

message NestedMessageInsideExtensions {
  optional string field = 1;
}
